[project]
name = "pydivine"
version = "0.1.0"
description = "LLM-based CLI divination app with tarot and runes support"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "google-genai>=1.33.0",
    "termcolor>=3.1.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
]
